Fix the overflow on the right side created by the css animation

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -148,3 +148,7 @@ section {
     background-position: 51% 0%
   }
 }
+
+body{
+    overflow-x: hidden;
+}
